# SublimeTextExplorerCommands

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  sublime_text_explorer_commands.sublime-project  sublime_text_explorer_commands.sublime-workspace  vcpkg.json
explorer_commands/: CMakeLists.txt  CMakePresets.json
explorer_commands/inc/: OpenHere.hpp  dllmain.hpp
explorer_commands/src/: OpenHere.cpp  dllmain.cpp
sparse_package/: AppxManifest.xml  CMakeLists.txt
